@@ -1,7 +1,7 @@
 // ------------------------------------------------------------------------------
 //  <autogenerated>
 //      This code was generated by a tool.
-//      Mono Runtime Version: 2.0.50727.42
+//      Mono Runtime Version: 2.0.50727.1433
 // 
 //      Changes to this file may cause incorrect behavior and will be lost if 
 //      the code is regenerated.
@@ -279,7 +279,7 @@ namespace MonoDevelop.VersionControl {
             this.repositoryServerEntry.Changed += new System.EventHandler(this.OnRepositoryServerEntryChanged);
             this.repositoryPathEntry.Changed += new System.EventHandler(this.OnRepositoryPathEntryChanged);
             this.repositoryPassEntry.Changed += new System.EventHandler(this.OnRepositoryPassEntryChanged);
-            this.repositoryPortSpin.Changed += new System.EventHandler(this.OnRepositoryPortSpinChanged);
+            this.repositoryPortSpin.ValueChanged += new System.EventHandler(this.OnRepositoryPortSpinValueChanged);
             this.comboProtocol.Changed += new System.EventHandler(this.OnComboProtocolChanged);
         }
     }
