@@ -1,3 +1,15 @@
+2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
+	  gtk-gui/generated.cs,
+	  gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
+	  gtk-gui/MonoDevelop.VersionControl.UrlBasedRepositoryEditor.cs,
+	  gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
+	  gtk-gui/gui.stetic,
+	  MonoDevelop.VersionControl/UrlBasedRepositoryEditor.cs: Fix bug
+	  #395563 - SVN plugin: Repository Configuration dialog only fills in
+	  port if arrow buttons pressed.
+
 2008-08-20  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.VersionControl.Views/StatusView.cs: Fix bug #401846 -
